--- a/get_prism.ipynb
+++ b/get_prism.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1O_mGNHo-X2Bro7o2GsLt7LHPB_1dCwKr",
-      "authorship_tag": "ABX9TyPqK7uLFtH0zF7+I2UKGb8O",
+      "authorship_tag": "ABX9TyPbo7oCQ2UiQMd0KLfgRHR6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,7 +71,7 @@
       "metadata": {
         "id": "puII-PYx19Ip"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -86,7 +86,7 @@
       "metadata": {
         "id": "bc27ChYj-cdy"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -110,6 +110,31 @@
       ],
       "metadata": {
         "id": "vh1d3jcIBBJt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Convert all the GEE tif outputs to nc\n",
+        "import os\n",
+        "import gdal\n",
+        "\n",
+        "inputfolder = './prism_tif'\n",
+        "outputfolder = './prism_nc'\n",
+        "\n",
+        "for file in os.listdir('./prism_tif'):\n",
+        "     filename = os.fsdecode(file)\n",
+        "     if filename.endswith('.tif'):\n",
+        "         inputfile = inputfolder+'/'+file\n",
+        "         datestring = file[:-3]\n",
+        "         nctype = 'nc'\n",
+        "         outputfile = outputfolder+'/'+datestring+nctype\n",
+        "         ds = gdal.Translate(outputfile, inputfile, format='NetCDF')"
+      ],
+      "metadata": {
+        "id": "LqnmgS47nK1e"
       },
       "execution_count": null,
       "outputs": []
