download ppt and tmean

--- a/get_prism.ipynb
+++ b/get_prism.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1O_mGNHo-X2Bro7o2GsLt7LHPB_1dCwKr",
-      "authorship_tag": "ABX9TyPbo7oCQ2UiQMd0KLfgRHR6",
+      "authorship_tag": "ABX9TyMLXqLZ4n5B2GxJ/w5jNLVd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,7 +71,7 @@
       "metadata": {
         "id": "puII-PYx19Ip"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -81,12 +81,12 @@
         "def clip(image):\n",
         "  return image.clip(area)\n",
         "\n",
-        "collection = ee.ImageCollection('OREGONSTATE/PRISM/AN81m').select('tmean').filterDate('1981-10-01', '2021-10-01').map(clip)"
+        "collection = ee.ImageCollection('OREGONSTATE/PRISM/AN81m').select('ppt').filterDate('1981-10-01', '2021-10-01').map(clip) # tmean or ppt"
       ],
       "metadata": {
         "id": "bc27ChYj-cdy"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -94,7 +94,7 @@
       "source": [
         "# Download the data\n",
         "collection.aggregate_array('system:index').getInfo()\n",
-        "geemap.ee_export_image_collection_to_drive(collection, folder='get_prism',crs='EPSG:4326',scale=4000)"
+        "geemap.ee_export_image_collection_to_drive(collection, folder='get_prism_precip',crs='EPSG:4326',scale=4000)"
       ],
       "metadata": {
         "id": "VjcQiQKg_bA5"
@@ -121,10 +121,10 @@
         "import os\n",
         "import gdal\n",
         "\n",
-        "inputfolder = './prism_tif'\n",
-        "outputfolder = './prism_nc'\n",
+        "inputfolder = './prism_precip_tif'\n",
+        "outputfolder = './prism_precip_nc'\n",
         "\n",
-        "for file in os.listdir('./prism_tif'):\n",
+        "for file in os.listdir('./prism_precip_tif'):\n",
         "     filename = os.fsdecode(file)\n",
         "     if filename.endswith('.tif'):\n",
         "         inputfile = inputfolder+'/'+file\n",
